--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.35",
+    "@nextui-org/input": "^2.2.3",
+    "@nextui-org/navbar": "^2.0.34",
+    "@nextui-org/react": "^2.4.3",
+    "@nextui-org/system": "^2.2.3",
+    "@nextui-org/theme": "^2.2.7",
+    "framer-motion": "^11.3.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
@@ -24,7 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.6",
     "vite": "^5.3.1"
   }
 }
