--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,15 @@
     "@nextui-org/react": "^2.4.3",
     "@nextui-org/system": "^2.2.3",
     "@nextui-org/theme": "^2.2.7",
+    "@reduxjs/toolkit": "^2.2.6",
+    "firebase": "^10.12.4",
     "framer-motion": "^11.3.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
